# Mind-method

./: .gitignore  README.md
2023-4-10-Idea-GraduationProject/: pom.xml
LearnCocosCreat/: project.json
MyApplicationForPractise/: settings.gradle
MyApplicationforlearn/: build.gradle  settings.gradle
MyHtml/: index.html  style.css
Practise/: settings.gradle
Project/: .editorconfig  Project.sln
Test_2023_08_24_test/: Test_2023_08_24_test.sln
Test_23_01_12_VS_Day2/: Test_23_01_12_VS_Day2.sln
shiyan2/: settings.gradle
shiyan3/: settings.gradle
shiyan52/: settings.gradle
shiyan6/: settings.gradle
test-9_28_test1/: main  main.c
test000/: test000.sln
test_01_04_Clion_GuessTheRanking/: CMakeLists.txt  main.c
test_01_05_Clion_GuessTheMurderer/: CMakeLists.txt  main.c
test_01_07_Clion_YangHui'stTriangle/: CMakeLists.txt  main.c
test_01_10_Clion_StringLeft-handed/: CMakeLists.txt  main.c
test_04_01_Clion_HelpForXinYu/: CMakeLists.txt  main.c
test_08_12/: CMakeLists.txt  game.c  game.h  test.c
test_09_08/: CMakeLists.txt  main.c
test_10_01_Clion_adddOne/: CMakeLists.txt  main.c
test_10_01_Clion_removeElements/: CMakeLists.txt  main.c
test_10_01_Clion_searchForInsertionLocation/: CMakeLists.txt  main.c
test_10_01_Clion_theLengthOfTheLastWord/: CMakeLists.txt  main.c
test_10_02_Clion_binarySummation/: CMakeLists.txt  main.c
test_10_04_Clion_climbTheStairs/: CMakeLists.txt  main.c
test_10_29/: main.c  (+1 more)
test_C_Clion_2023_12_14TheFirstQuestionOfThePastExamPaperOfCLanguageForPostgraduateEntranceExaminationIn2020/: CMakeLists.txt  main.c
(+865 files in other folders)
